# TemplatedFactory

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
docs/: Doxyfile
include/factory/: factory.h
src/: factory.cpp
tests/: factory_tests.cpp
