cmake_minimum_required(VERSION 3.10)
project(TemplatedFactory CXX)
option(enable_tests "Build Tests" ON)

set(${PROJECT_NAME}_src include/factory/factory.h src/factory.cpp)
add_library(${PROJECT_NAME} SHARED ${${PROJECT_NAME}_src})
target_include_directories(${PROJECT_NAME} PUBLIC include/)
if(enable_tests)
	enable_testing()
	find_package(GTest REQUIRED)
	add_executable(${PROJECT_NAME}-tests tests/factory_tests.cpp)
	target_include_directories(${PROJECT_NAME}-tests PRIVATE include/)
	target_link_libraries(${PROJECT_NAME}-tests PRIVATE GTest::Main ${PROJECT_NAME})
endif(enable_tests)